// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard component Renders static elements 1`] = `
<div
  className="dashboard"
>
  <h2>
    Dashboard
  </h2>
  <div
    className="dashboard__container"
  >
    <div
      className="dashboard__habits"
    >
      <div
        className="dashboard__row"
      />
    </div>
    <div
      className="dashboard__days"
    >
      <div
        className="dashboard__row"
      >
        <div
          className="dashboard__cell"
        >
          Mon
        </div>
        <div
          className="dashboard__cell"
        >
          Tue
        </div>
        <div
          className="dashboard__cell"
        >
          Wed
        </div>
        <div
          className="dashboard__cell"
        >
          Thu
        </div>
        <div
          className="dashboard__cell"
        >
          Fri
        </div>
        <div
          className="dashboard__cell"
        >
          Sat
        </div>
        <div
          className="dashboard__cell"
        >
          Sun
        </div>
      </div>
    </div>
  </div>
  <button
    className="dashboard__add"
    onClick={[Function]}
  >
    Add habit
  </button>
</div>
`;

exports[`Dashboard component Shows the correct ammount of habits 1`] = `
<div
  className="dashboard"
>
  <h2>
    Dashboard
  </h2>
  <div
    className="dashboard__container"
  >
    <div
      className="dashboard__habits"
    >
      <div
        className="dashboard__row"
      />
      <div
        className="dashboard__row"
        key="habit-0"
      >
        exercise
      </div>
      <div
        className="dashboard__row"
        key="habit-1"
      >
        read
      </div>
    </div>
    <div
      className="dashboard__days"
    >
      <div
        className="dashboard__row"
      >
        <div
          className="dashboard__cell"
        >
          Mon
        </div>
        <div
          className="dashboard__cell"
        >
          Tue
        </div>
        <div
          className="dashboard__cell"
        >
          Wed
        </div>
        <div
          className="dashboard__cell"
        >
          Thu
        </div>
        <div
          className="dashboard__cell"
        >
          Fri
        </div>
        <div
          className="dashboard__cell"
        >
          Sat
        </div>
        <div
          className="dashboard__cell"
        >
          Sun
        </div>
      </div>
      <div
        className="dashboard__row"
        key="check-container-0"
      >
        <input
          className="dashboard__cell"
          key="check-0-0"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-0-1"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-0-2"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-0-3"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-0-4"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-0-5"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-0-6"
          type="checkbox"
        />
      </div>
      <div
        className="dashboard__row"
        key="check-container-1"
      >
        <input
          className="dashboard__cell"
          key="check-1-0"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-1-1"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-1-2"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-1-3"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-1-4"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-1-5"
          type="checkbox"
        />
        <input
          className="dashboard__cell"
          key="check-1-6"
          type="checkbox"
        />
      </div>
    </div>
  </div>
  <button
    className="dashboard__add"
    onClick={[Function]}
  >
    Add habit
  </button>
</div>
`;
